tests/ui/derives/imperfect-derive-phantom.stderr
error[E0277]: the trait bound `S<X>: Clone` is not satisfied
  --> $DIR/imperfect-derive-phantom.rs:14:26
   |
LL |     require_clone(S::<X>(PhantomData));
   |     -------------        ^^^^^^^^^^^ the trait `Clone` is not implemented for `S<X>`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `S<X>` to implement `Clone`
  --> $DIR/imperfect-derive-phantom.rs:7:8
   |
LL | #[derive(Clone)]
   |          ----- in this derive macro expansion
LL | struct S<T>(PhantomData<T>);
   |        ^ - type parameter would need to implement `Clone`
   = help: consider manually implementing `Clone` to avoid undesired bounds caused by "imperfect derives"
   = note: to learn more, visit <https://github.com/rust-lang/rust/issues/26925>
note: required by a bound in `require_clone`
  --> $DIR/imperfect-derive-phantom.rs:11:21
   |
LL | fn require_clone<T: Clone>(_t: T) {}
   |                     ^^^^^ required by this bound in `require_clone`
help: consider borrowing here
   |
LL |     require_clone(S::<X>(&PhantomData));
   |                          +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
